--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ h1{
   margin-top:20px;
 }
 
-/* Button */
 button{
   padding:12px 25px;
   font-size:18px;
@@ -40,9 +39,132 @@ button{
   margin-top:20px;
 }
 
-/* Card below button */
+/* Surprise box */
+.surprise{
+  display:none;
+  margin:30px auto;
+  background:white;
+  color:#ff4f7a;
+  padding:20px;
+  border-radius:20px;
+  max-width:320px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.3);
+  font-size:22px;
+}
+
+/* Card */
 .card{
   background:white;
   color:#ff4f7a;
-  padding:18px;
-  border-radius:20p
+  padding:15px;
+  border-radius:20px;
+  margin-top:20px;
+}
+
+.card img{
+  width:100%;
+  border-radius:15px;
+}
+
+.heart{
+  position:fixed;
+  bottom:-20px;
+  font-size:20px;
+  animation:floatUp 6s linear infinite;
+}
+
+@keyframes floatUp{
+  0%{transform:translateY(0);opacity:1;}
+  100%{transform:translateY(-100vh);opacity:0;}
+}
+</style>
+</head>
+
+<body>
+
+<!-- 🔐 PASSWORD SCREEN -->
+<div id="lockScreen" style="
+position:fixed;
+top:0;left:0;
+width:100%;height:100%;
+background:linear-gradient(135deg,#ff758c,#ff7eb3);
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+z-index:9999;
+">
+
+<h1>🔐 Enter Secret Code</h1>
+<p>(Hint: Special date ❤️)</p>
+
+<input id="passwordInput" type="password" placeholder="Enter password"
+style="padding:12px;font-size:18px;border:none;border-radius:20px;text-align:center;">
+
+<button onclick="checkPassword()">Unlock 💖</button>
+<p id="errorMsg"></p>
+</div>
+
+<audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3">
+</audio>
+
+<div class="container">
+<h1>🎂 Happy Birthday My Love ❤️</h1>
+
+<div id="typewriter"></div>
+
+<button onclick="showSurprise()">Click for Surprise 🎁</button>
+
+<!-- 🎁 SURPRISE -->
+<div class="surprise" id="surpriseBox">
+  🍝 White pasta treat for my <b>Anand</b> ❤️
+
+  <!-- 💌 CARD -->
+  <div class="card">
+    <img src="card.jpg">
+    <h3>Happy Birthday Duggu 🎂</h3>
+    <p>I love you forever ❤️</p>
+  </div>
+</div>
+
+</div>
+
+<script>
+function checkPassword(){
+  if(document.getElementById("passwordInput").value==="1410"){
+    document.getElementById("lockScreen").style.display="none";
+  }else{
+    document.getElementById("errorMsg").innerText="Wrong password 💔";
+  }
+}
+
+const text="Today is not just your birthday… it’s the day the world got someone special 💖";
+let i=0;
+function typeWriter(){
+  if(i<text.length){
+    document.getElementById("typewriter").innerHTML+=text.charAt(i);
+    i++;
+    setTimeout(typeWriter,70);
+  }
+}
+typeWriter();
+
+function showSurprise(){
+  document.getElementById("surpriseBox").style.display="block";
+}
+
+function createHeart(){
+  const heart=document.createElement("div");
+  heart.className="heart";
+  heart.innerHTML="❤️";
+  heart.style.left=Math.random()*100+"vw";
+  heart.style.fontSize=(Math.random()*20+15)+"px";
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),6000);
+}
+setInterval(createHeart,400);
+</script>
+
+</body>
+</html>
