--- a/index.html
+++ b/index.html
@@ -146,16 +146,19 @@ audio{display:none;}
   </p>
 
   <button class="main-btn" onclick="toggleSurprise()">
-    🍝 White Sauce Pasta treat from my Anand 🤍
+    Click for Surprise 🎁
   </button>
 
   <!-- 🎁 CARD -->
+  <div class="surprise" id="surpriseBox">
+    🍝 White pasta treat for my <b>Anand</b> ❤️
   <div class="card" id="surpriseCard">
     <img src="card.jpg" alt="Birthday Card">
     <h3>
       Happy Birthday Duggu,<br>
       I love you forever ❤️
     </h3>
+  </div>
   </div>
 </div>
 
