--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@ body{
   z-index:9999;
 }
 
-#lockScreen h1{
-  margin-bottom:10px;
-}
-
 #lockScreen input{
   padding:12px;
   font-size:18px;
@@ -65,7 +61,6 @@ body{
 
 #errorMsg{
   margin-top:10px;
-  color:#fff;
 }
 
 /* MAIN CONTENT */
@@ -93,13 +88,21 @@ p{
   font-size:1rem;
   font-weight:bold;
   cursor:pointer;
-  box-shadow:0 5px 15px rgba(0,0,0,0.2);
+}
+
+/* SURPRISE TEXT + CARD */
+#surpriseBox{
+  display:none;
+  margin-top:20px;
+}
+
+.treat-text{
+  margin-bottom:12px;
+  font-weight:bold;
 }
 
 /* CARD */
 .card{
-  display:none;
-  margin-top:25px;
   background:white;
   border-radius:16px;
   padding:15px;
@@ -131,7 +134,6 @@ audio{display:none;}
 <!-- 🔐 PASSWORD SCREEN -->
 <div id="lockScreen">
   <h1>🔐 Enter Secret Code</h1>
-  <p>(Hint: Special Date ❤️)</p>
   <input type="password" id="passwordInput" placeholder="Enter password">
   <button onclick="checkPassword()">Unlock 💖</button>
   <div id="errorMsg"></div>
@@ -149,16 +151,19 @@ audio{display:none;}
     Click for Surprise 🎁
   </button>
 
-  <!-- 🎁 CARD -->
-  <div class="surprise" id="surpriseBox">
-    🍝 White pasta treat for my <b>Anand</b> ❤️
-  <div class="card" id="surpriseCard">
-    <img src="card.jpg" alt="Birthday Card">
-    <h3>
-      Happy Birthday Duggu,<br>
-      I love you forever ❤️
-    </h3>
-  </div>
+  <!-- 🎁 SURPRISE CONTENT -->
+  <div id="surpriseBox">
+    <div class="treat-text">
+      🍝 White sauce pasta treat for my <b>Anand</b> ❤️
+    </div>
+
+    <div class="card">
+      <img src="card.jpg" alt="Birthday Card">
+      <h3>
+        Happy Birthday Duggu,<br>
+        I love you forever ❤️
+      </h3>
+    </div>
   </div>
 </div>
 
@@ -178,12 +183,12 @@ function checkPassword(){
   }
 }
 
-/* TOGGLE CARD */
+/* TOGGLE SURPRISE */
 let visible = false;
 function toggleSurprise(){
-  const card = document.getElementById("surpriseCard");
+  const box = document.getElementById("surpriseBox");
   visible = !visible;
-  card.style.display = visible ? "block" : "none";
+  box.style.display = visible ? "block" : "none";
 }
 </script>
 
