--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ audio{display:none;}
   <!-- 🎁 SURPRISE CONTENT -->
   <div id="surpriseBox">
     <div class="treat-text">
-      🍝 White sauce pasta treat for my <b>Anand</b> ❤️
+      Select your Favourite pair of Shoes and sent me the the QR <B> Anand Baby </b>❤️
+     
     </div>
 
     <div class="card">
