--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body{
   text-align:center;
   color:white;
   padding:20px;
+  overflow:hidden;
 }
 
 /* 🔐 LOCK SCREEN */
@@ -36,6 +37,10 @@ body{
   justify-content:center;
   align-items:center;
   z-index:9999;
+}
+
+#lockScreen h1{
+  margin-bottom:15px;
 }
 
 #lockScreen input{
@@ -90,7 +95,7 @@ p{
   cursor:pointer;
 }
 
-/* SURPRISE TEXT + CARD */
+/* SURPRISE BOX */
 #surpriseBox{
   display:none;
   margin-top:20px;
@@ -125,6 +130,27 @@ p{
   to{opacity:1; transform:translateY(0);}
 }
 
+/* 💕 FLOATING HEARTS */
+.heart{
+  position:fixed;
+  bottom:-10px;
+  font-size:16px;
+  animation:floatUp 6s linear forwards;
+  opacity:0.8;
+  pointer-events:none;
+}
+
+@keyframes floatUp{
+  0%{
+    transform:translateY(0) scale(1);
+    opacity:0.9;
+  }
+  100%{
+    transform:translateY(-110vh) scale(1.5);
+    opacity:0;
+  }
+}
+
 audio{display:none;}
 </style>
 </head>
@@ -139,12 +165,12 @@ audio{display:none;}
   <div id="errorMsg"></div>
 </div>
 
-<!-- ❤️ MAIN PAGE -->
+<!-- ❤️ MAIN CONTENT -->
 <div class="container">
   <h2>🎂 Happy Birthday My Love ❤️</h2>
   <p>
-    Health, wealth, love, and all your dreams —  
-    may life give you everything you deserve 💫❤️
+    You get healthier, wealthier, and richer with every year.  
+    May all your dreams come true, my love 💫❤️
   </p>
 
   <button class="main-btn" onclick="toggleSurprise()">
@@ -154,8 +180,7 @@ audio{display:none;}
   <!-- 🎁 SURPRISE CONTENT -->
   <div id="surpriseBox">
     <div class="treat-text">
-      Select your Favourite pair of Shoes and sent me the the QR <B> Anand Baby </b>❤️
-     
+      White Pasta treat for my Anand 🍝❤️
     </div>
 
     <div class="card">
@@ -174,11 +199,12 @@ audio{display:none;}
 </audio>
 
 <script>
-/* PASSWORD */
+/* PASSWORD CHECK */
 function checkPassword(){
   if(document.getElementById("passwordInput").value === "1410"){
     document.getElementById("lockScreen").style.display = "none";
     document.getElementById("bgMusic").play();
+    startHearts();
   }else{
     document.getElementById("errorMsg").innerText = "Wrong password 💔";
   }
@@ -190,6 +216,20 @@ function toggleSurprise(){
   const box = document.getElementById("surpriseBox");
   visible = !visible;
   box.style.display = visible ? "block" : "none";
+}
+
+/* 💕 HEARTS */
+function startHearts(){
+  setInterval(()=>{
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerText = "❤️";
+    heart.style.left = Math.random()*100 + "vw";
+    heart.style.fontSize = Math.random()*10 + 12 + "px";
+    document.body.appendChild(heart);
+
+    setTimeout(()=>heart.remove(),6000);
+  },500);
 }
 </script>
 
