--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ audio{display:none;}
   <!-- 🎁 SURPRISE CONTENT -->
   <div id="surpriseBox">
     <div class="treat-text">
-      White Pasta treat for my Anand 🍝❤️
+      Select your favourite pair of shoes and send me QR my Anand Baby ❤️
     </div>
 
     <div class="card">
